; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_network-backend-lua.c_proxy_backends_get.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_network-backend-lua.c_proxy_backends_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @proxy_backends_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proxy_backends_get(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @luaL_checkself(i32* %8)
  %10 = inttoptr i64 %9 to i32**
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @luaL_checkinteger(i32* %12, i32 2)
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %7, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32* @network_backends_get(i32* %15, i32 %16)
  store i32* %17, i32** %4, align 8
  %18 = icmp eq i32* null, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %1
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @lua_pushnil(i32* %20)
  store i32 1, i32* %2, align 4
  br label %31

22:                                               ; preds = %1
  %23 = load i32*, i32** %3, align 8
  %24 = call i32** @lua_newuserdata(i32* %23, i32 8)
  store i32** %24, i32*** %5, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = load i32**, i32*** %5, align 8
  store i32* %25, i32** %26, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @network_backend_lua_getmetatable(i32* %27)
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 @lua_setmetatable(i32* %29, i32 -2)
  store i32 1, i32* %2, align 4
  br label %31

31:                                               ; preds = %22, %19
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @luaL_checkself(i32*) #1

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32* @network_backends_get(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @network_backend_lua_getmetatable(i32*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
